# novel-finder

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  criteria.example.toml
.claude/: workflow.md
.claude/agents/: implementer.md  manager.md  orchestrator.md  planner.md  researcher.md  verifier.md
src/: config.rs  main.rs  models.rs  output.rs  pipeline.rs  queue.rs
src/discovery/: also_liked.rs  mod.rs
src/eval/: filter.rs  llm.rs  local.rs  mod.rs
src/scraper/: mod.rs  novel_page.rs  reviews.rs  search.rs
src/scraper/testdata/: novel_page_90435.html  similar_90435.json
