[package]
name = "novel-finder"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to find the perfect webnovel on RoyalRoad"

[dependencies]
ureq = "2.7"
scraper = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
clap = { version = "4.3.0", features = ["derive"] }
anyhow = "1"
tabled = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
